Changed the default query to be WikiLeaks for performance reasons (it's downloading a much smaller data file is all)

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,6 +1,6 @@
 {% if fq is not defined %}
     {# Should be a single-quoted string, since the NYT Article Search API needs those double quotes. #}
-    {% set fq = 'persons:("Obama, Barack")' %}
+    {% set fq = 'organizations:("WIKILEAKS")' %}
 {% endif %}
 
 <!DOCTYPE html>
